# SCQCS

./: .gitignore  404.css  404.html  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  PREFLIGHT.md  README.md  SITE_SECURITY_CHECKLIST.md  VBW.md  _headers  _redirects  humans.txt  index.html  llms.txt  main.js  robots.txt  security.txt  site.webmanifest  sitemap.xml  styles.css
.github/workflows/: vbw-build.yml
.well-known/: security.txt
docs/: CONTRIBUTING.md  GETTING_STARTED.md  PREFLIGHT.md  SITE_SECURITY_CHECKLIST.md  VBW.md
schemas/vbw/: environment-1.0.schema.json  manifest-1.0.schema.json  materials-lock-1.0.schema.json  outputs-1.0.schema.json  policy-1.0.schema.json
tools/scqcs/: Cargo.toml
tools/scqcs/src/: cli.rs  git.rs  hash.rs  main.rs  sign.rs
tools/scqcs/src/vbw/: build.rs  canonical.rs  mod.rs  model.rs  verify.rs
